Upgrade to JGit 3.5.3
This version of JGit contains a security-fix for CVE-2014-9390.

See: https://dev.eclipse.org/mhonarc/lists/jgit-dev/msg02789.html

--- a/com.codeaffine.gonsole.releng/repository/pom.xml
+++ b/com.codeaffine.gonsole.releng/repository/pom.xml
@@ -71,7 +71,7 @@
             </repository>
             <!-- Repository for JGit -->
             <repository>
-              <url>http://download.eclipse.org/egit/updates-stable-nightly</url>
+              <url>http://download.eclipse.org/egit/updates-3.5.3/</url>
               <layout>p2</layout>
             </repository>
             <!-- Repository for Xiliary -->
